tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__CharmofDislocati-SxCNz5_RSym0Q-uKaG2JRA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 11516068363380820292,
  "prerequisites": [
    464
  ],
  "properties": {
    "auto_claim": false,
    "desc": "They have limited durability. So either put them on a pedestal to avoid durability loss, or use a thaumic restorer.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Charm of Dislocation",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    464
  ],
  "rewards": [],
  "tasks": []
}
