tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__ElectricFeederUn-AAAAAAAAAAAAAAAAAAAEpg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1190,
  "prerequisites": [
    1189
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To get your tracks electrified you need an electric feeding unit, shunting wires and some support frames. You can use an MFE or a transformer to get GT energy into the feeder unit.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Electric Feeder Unit",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1189
  ],
  "rewards": [],
  "tasks": []
}
