tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__ElectrotineJetpa-AAAAAAAAAAAAAAAAAAAChw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 647,
  "prerequisites": [
    646
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Your glider gets you to the ground safely but it does not have any method to get up. After you researched electrotine you discovered that it is powerful enough for your first jetpack.\n\nA diamond chestplate surrounded with 4 electrotine batteries is powerful enough to bring you up into the air.\n\nIt does not have a hover mode so you better take your glider with you.\n\nHint: This jetpack can't fly higher than Y-128.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Electrotine Jetpack",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    646
  ],
  "rewards": [],
  "tasks": []
}
