tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__EnhancedCharmofD-G7ACOCTJRi-bk6XQxZVtIQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2650727026676559137,
  "prerequisites": [
    467,
    11516068363380820292
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Very powerful.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Enhanced Charm of Dislocation",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    467,
    11516068363380820292
  ],
  "rewards": [],
  "tasks": []
}
