tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__Flippers-AAAAAAAAAAAAAAAAAAALUw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2899,
  "prerequisites": [
    2900,
    13
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Maybe you were lucky and found some Flippers in a loot chest or dungeon.\n\nFlippers allow the player to swim at the same speed as walking. The only problem is that it has 0 armor protection.\n\nIf you're doing underwater construction, or digging out some clay or gravel, you may find them useful.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 1,
    "name": "Flippers",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "SECRET"
  },
  "required_prerequisites": [
    2900,
    13
  ],
  "rewards": [],
  "tasks": []
}
